# rusteze

./: .gitignore  Cargo.toml  README.md  RELEASE_CHECKLIST.md  benchmark.py  setup.py  test_parallel.py  verify_release.py
.cursor/rules/: rust-patterns.mdc  stoat-infra-testing.mdc
crates/auth/: Cargo.toml
crates/auth/src/: lib.rs  password.rs  session.rs  token.rs
crates/db/: Cargo.toml
crates/db/migrations/: 001_init.sql
crates/db/src/: channels.rs  invites.rs  lib.rs  members.rs  messages.rs  servers.rs  users.rs
crates/gateway/: Cargo.toml
crates/gateway/src/: main.rs
crates/media/: Cargo.toml
crates/media/src/: lib.rs
crates/models/: Cargo.toml
crates/models/src/: channel.rs  event.rs  lib.rs  message.rs  server.rs  user.rs
crates/server/: Cargo.toml
crates/server/src/: error.rs  extract.rs  main.rs  state.rs
crates/server/src/routes/: auth.rs  channels.rs  invites.rs  messages.rs  mod.rs  servers.rs
rusteze/: __init__.py
rusteze-core/: Cargo.toml
rusteze-core/src/: env.rs  events.rs  headless_renderer.rs  lib.rs  lib_tests.rs  multi_env.rs  reward_manager.rs  shader.wgsl  shaders.rs  shaders.wgsl
rusteze-core/src/collision/: aabb.rs  collidable.rs
rusteze-core/src/entity/: chaser.rs  entity.rs  entity_manager.rs  humanoid.rs  monster.rs  walker_in_circle.rs
rusteze-core/src/game/: actions.rs  attack.rs  crafting.rs  player.rs
rusteze-core/src/opengl/: cube.rs  cube_instance.rs  entity.rs  rectangle.rs
rusteze-core/src/server/: game_server.rs  monster_manager.rs  server_state.rs  server_update.rs  world_dispatcher.rs
rusteze-core/src/world/: block_kind.rs  chunk.rs  cube.rs  cubes_to_draw.rs  world.rs  world_serializer.rs
rusteze-core/src/world/generation/: biome.rs  biomes_def.rs  perlin.rs  world_generator.rs
rusteze-rl/: README.md  record_human_play.py  setup.py  test_trained_model.py  train.py
rusteze-rl/rusteze_rl/: __init__.py  wrapper.py
scripts/: e2e-test.sh
