[workspace]
resolver = "2"
members = [
    "crates/server",
    "crates/gateway",
    "crates/db",
    "crates/models",
    "crates/auth",
    "crates/media",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"
repository = "https://github.com/infatoshi/rusteze"

[workspace.dependencies]
# Async
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# Web
axum = { version = "0.8", features = ["ws", "multipart"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "compression-gzip"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono", "json"] }

# Redis
fred = { version = "10", features = ["subscriber-client"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Auth
argon2 = "0.5"
jsonwebtoken = "9"
totp-rs = { version = "5", features = ["gen_secret", "otpauth"] }
uuid = { version = "1", features = ["v4", "v7", "serde"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Config
dotenvy = "0.15"

# Crypto
rand = "0.9"

[profile.release]
lto = true
codegen-units = 1
strip = "symbols"
