[package]
name = "rusteze-core"
version = "0.1.0"
edition = "2021"

[lib]
name = "rusteze_core"
crate-type = ["cdylib", "rlib"]

[features]
default = []
extension-module = ["pyo3/extension-module"]

[dependencies]
strum = { version = "0.26", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = { version = "0.8.5", features = ["small_rng"] }
clap = { version = "4.5.17", features = ["derive"] }
wgpu = "0.19"
pollster = "0.3"
pyo3 = { version = "0.21", features = ["extension-module"] }
numpy = "0.21"
bytemuck = { version = "1.14", features = ["derive"] }
image = "0.24"
rayon = "1.8"
