[package]
name = "rusteze-auth"
version.workspace = true
edition.workspace = true

[dependencies]
rusteze-db = { path = "../db" }
rusteze-models = { path = "../models" }
sqlx.workspace = true
uuid.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
argon2.workspace = true
jsonwebtoken.workspace = true
totp-rs.workspace = true
rand.workspace = true
sha2 = "0.10"
