[package]
name = "rusteze-db"
version.workspace = true
edition.workspace = true

[dependencies]
rusteze-models = { path = "../models" }
sqlx.workspace = true
uuid.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
async-trait.workspace = true
rand.workspace = true
