[package]
name = "rusteze-gateway"
version.workspace = true
edition.workspace = true

[[bin]]
name = "rusteze-gateway"
path = "src/main.rs"

[dependencies]
rusteze-models = { path = "../models" }
rusteze-db = { path = "../db" }
rusteze-auth = { path = "../auth" }
axum = { workspace = true, features = ["ws"] }
tokio.workspace = true
fred.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
dotenvy.workspace = true
sqlx.workspace = true
futures = "0.3"
