[package]
name = "rusteze-server"
version.workspace = true
edition.workspace = true

[[bin]]
name = "rusteze-server"
path = "src/main.rs"

[dependencies]
rusteze-db = { path = "../db" }
rusteze-models = { path = "../models" }
rusteze-auth = { path = "../auth" }
rusteze-media = { path = "../media" }
axum.workspace = true
axum-extra.workspace = true
tower.workspace = true
tower-http.workspace = true
tokio.workspace = true
sqlx.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
dotenvy.workspace = true
thiserror.workspace = true
fred.workspace = true
